@@ -10,9 +10,9 @@ import core.commands.utils.*;
 import core.exceptions.LastFmException;
 import core.imagerenderer.util.pie.DefaultList;
 import core.imagerenderer.util.pie.IPieableList;
-import core.imagerenderer.util.pie.OptionalPie;
 import core.imagerenderer.util.pie.PieSetUp;
 import core.parsers.ArtistTimeFrameParser;
+import core.parsers.OptionalEntity;
 import core.parsers.Parser;
 import core.parsers.params.ArtistTimeFrameParameters;
 import core.parsers.params.CommandParameters;
@@ -24,23 +24,22 @@ import org.apache.commons.lang3.StringUtils;
 import org.knowm.xchart.PieChart;
 
 import javax.validation.constraints.NotNull;
-import java.awt.image.BufferedImage;
 import java.util.Arrays;
 import java.util.List;
 
-public class FavesFromArtistCommand extends ConcurrentCommand<ArtistTimeFrameParameters> {
+public class TimeOnArtistCommand extends ConcurrentCommand<ArtistTimeFrameParameters> {
 
     private final DiscogsApi discogs;
     private final Spotify spotify;
     private final IPieableList<Track, CommandParameters> pie;
 
-    public FavesFromArtistCommand(ServiceView dao) {
+    public TimeOnArtistCommand(ServiceView dao) {
         super(dao);
-        this.pie = DefaultList.fillPie(Track::getPie, Track::getPlays);
-        new OptionalPie(this.getParser());
         respondInPrivate = true;
         this.discogs = DiscogsSingleton.getInstanceUsingDoubleLocking();
         this.spotify = SpotifySingleton.getInstance();
+        this.pie = DefaultList.fillPie(Track::getPie, Track::getDuration);
+
     }
 
     @Override
@@ -50,23 +49,28 @@ public class FavesFromArtistCommand extends ConcurrentCommand<ArtistTimeFramePar
 
     @Override
     public Parser<ArtistTimeFrameParameters> initParser() {
-        return new ArtistTimeFrameParser(db, lastFM, true);
+        return new ArtistTimeFrameParser(db, lastFM, true, new OptionalEntity("list", "break it down by track"));
     }
 
     @Override
     public String getDescription() {
-        return "Your favourite tracks from an artist";
+        return "Your time spent on an artist";
     }
 
     @Override
     public List<String> getAliases() {
-        return Arrays.asList("favs", "favourites", "favorites");
+        return Arrays.asList("time", "artisttime");
+    }
+
+    @Override
+    public String slashName() {
+        return "specific-time";
     }
 
     @Override
     public String getName() {
 
-        return "Fav tracks";
+        return "Time on an artist";
     }
 
     @Override
@@ -82,8 +86,9 @@ public class FavesFromArtistCommand extends ConcurrentCommand<ArtistTimeFramePar
 
         DiscordUserDisplay uInfo = CommandUtil.getUserInfoUnescaped(e, userId);
         String userString = uInfo.getUsername();
+
         if (timeframew.equals(TimeFrameEnum.ALL)) {
-            ai = db.getTopArtistTracks(lastFmName, who.getArtistId(), Integer.MAX_VALUE);
+            ai = db.getTopArtistTracksDuration(lastFmName, who.getArtistId(), Integer.MAX_VALUE);
             if (ai.isEmpty()) {
                 sendMessageQueue(e, ("Couldn't find any track of %s for %s%s".formatted(CommandUtil.escapeMarkdown(who.getArtist()), userString, timeframew.getDisplayString())));
                 return;
@@ -95,34 +100,37 @@ public class FavesFromArtistCommand extends ConcurrentCommand<ArtistTimeFramePar
                 return;
             }
         }
-        String title = String.format("%s's top %s tracks%s", userString, who.getArtist(), timeframew.getDisplayString());
-        String footer = "%s has listened to %d different %s songs!".formatted(userString, ai.size(), who.getArtist());
+        String fullStr = "%s has listen to **%s** distinct **%s** tracks (%s scrobbles) for a total of **%s**!".formatted(uInfo.getUsername(),
+                ai.size(),
+                who.getArtist(),
+                ai.stream().mapToInt(Track::getPlays).sum(),
+                CommandUtil.secondFormatter(ai.stream().mapToInt(Track::getDuration).sum()));
         RemainingImagesMode effectiveMode = CommandUtil.getEffectiveMode(params.getLastFMData().getRemainingImagesMode(), params);
+        String title = String.format("%s's top %s tracks%s by time", userString, who.getArtist(), timeframew.getDisplayString());
         switch (effectiveMode) {
-            case IMAGE, LIST -> {
+            case IMAGE -> sendMessageQueue(e, fullStr);
+            case LIST -> {
+                String footer = fullStr.replaceAll("\\*\\*", "");
                 EmbedBuilder embedBuilder = new ChuuEmbedBuilder(e)
                         .setAuthor(title, PrivacyUtils.getLastFmArtistUserUrl(who.getArtist(), lastFmName), uInfo.getUrlImage())
                         .setThumbnail(CommandUtil.noImageUrl(who.getUrl()));
 
-                if (ai.size() > 10) {
-
-                    if (!StringUtils.isBlank(ai.get(0).getImageUrl())) {
-                        embedBuilder.setFooter(footer, ai.get(0).getImageUrl());
-                    } else {
-                        embedBuilder.setFooter(footer);
-                    }
+                if (!StringUtils.isBlank(ai.get(0).getImageUrl())) {
+                    embedBuilder.setFooter(footer, ai.get(0).getImageUrl());
+                } else {
+                    embedBuilder.setFooter(footer);
                 }
-                new ListSender<>(e, ai, g -> ". **[" + CommandUtil.escapeMarkdown(g.getName()) + "](" + LinkUtils.getLastFMArtistTrack(who.getArtist(), g.getName()) + ")** - " + g.getPlays() + " plays" +
-                                             "\n", embedBuilder)
+                new ListSender<>(e, ai, g -> ". **[%s](%s)** - %s (%d plays)\n".formatted(CommandUtil.escapeMarkdown(g.getName()), LinkUtils.getLastFMArtistTrack(who.getArtist(), g.getName()),
+                        CommandUtil.secondFormatter(g.getDuration() * g.getPlays()),
+                        g.getPlays()), embedBuilder)
                         .doSend();
             }
             case PIE -> {
-                PieChart pieChart = this.pie.doPie(params, ai);
+                String footer = fullStr.replaceAll("\\*\\*", "");
+                PieChart pieChart = pie.doPie(params, ai);
                 pieChart.setTitle(title);
-                BufferedImage image = new PieSetUp(footer, who.getUrl(), pieChart).setUp();
-                sendImage(image, e);
+                sendImage(new PieSetUp(footer, who.getUrl(), pieChart).setUp(), e);
             }
         }
-
     }
 }
